--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
   "bugs": {
     "url": "https://github.com/freeCodeCamp/boilerplate-npm/issues"
   },
-  "homepage": "https://github.com/freeCodeCamp/boilerplate-npm#readme"
+  "homepage": "https://github.com/freeCodeCamp/boilerplate-npm#readme",
+  "devDependencies": {}
 }
